# Loguru-Python

./: .gitignore  README.md  pyproject.toml
app/: __main__.py  app.py
app/package_a/: modulo_a.py
app/package_b/: modulo_b.py
app/utils/: config_polars.py
configuracao/: config_polars.json
