[tool.poetry]
name = "loguru-python"
version = "0.1.0"
description = ""
authors = ["Fenyx Forte <fenyx.studies@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.logging.dependencies]
loguru = ">=0.7.2"


[tool.poetry.group.dados.dependencies]
polars = {version = ">=1.3.0", extras = ["pyarrow"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
